--- a/pom.xml
+++ b/pom.xml
@@ -9,39 +9,62 @@
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     
-    <name>Heisenbug 2022 Conference Slides</name>
-    <description>Heisenbug 2022 Conference Slides</description>
+    <name>Heisenbug 2022/DevoXX 2024 Conference Slides</name>
+    <description>Heisenbug 2022/DevoXX 2024 Conference Slides</description>
 
     <properties>        
-        <asciidoctor.maven.plugin.version>1.6.0</asciidoctor.maven.plugin.version>
         <project.slides.directory>${project.build.directory}/generated-slides</project.slides.directory>
-        <revealjs.version>3.7.0</revealjs.version>
-        <highlightjs.version>9.14.0</highlightjs.version>
-        <asciidoctor-revealjs.version>2.0.0</asciidoctor-revealjs.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <asciidoctor.maven.plugin.version>3.0.0</asciidoctor.maven.plugin.version>
+        <asciidoctorj.version>2.5.12</asciidoctorj.version>
+        <asciidoctorj.diagram.version>2.3.0</asciidoctorj.diagram.version>
+        <jruby.version>9.4.6.0</jruby.version>
+        <revealjs.version>3.9.2</revealjs.version>
+        <!-- Use 'master' as version and remove the 'v' prefixing the download url to use the current snapshot version  -->
+        <asciidoctor-revealjs.version>master</asciidoctor-revealjs.version>
     </properties>
     
+    <dependencies>
+        <dependency>
+            <groupId>rubygems</groupId>
+            <artifactId>asciidoctor-revealjs</artifactId>
+            <version>4.1.0</version>
+            <type>gem</type>
+            <!-- Avoid downloading gems included in AsciidoctorJ -->
+            <exclusions>
+                <exclusion>
+                    <groupId>rubygems</groupId>
+                    <artifactId>asciidoctor</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>rubygems</groupId>
+                    <artifactId>thread_safe</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>rubygems</groupId>
+                    <artifactId>concurrent-ruby</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+    </dependencies>
 
     <build>
         <defaultGoal>process-resources</defaultGoal>
+        <extensions>
+            <extension> <!-- this allows us to download gems -->
+                <groupId>org.jruby.maven</groupId>
+                <artifactId>mavengem-wagon</artifactId>
+                <version>2.0.2</version>
+            </extension>
+        </extensions>
         <plugins>
             <plugin>
                 <groupId>com.googlecode.maven-download-plugin</groupId>
                 <artifactId>download-maven-plugin</artifactId>
-                <version>1.3.0</version>
+                <version>1.7.1</version>
                 <executions>
-                    <execution>
-                        <id>install-asciidoctor-revealjs</id>
-                        <phase>generate-resources</phase>
-                        <goals>
-                            <goal>wget</goal>
-                        </goals>
-                        <configuration>
-                            <url>https://github.com/asciidoctor/asciidoctor-reveal.js/archive/v${asciidoctor-revealjs.version}.zip</url>
-                            <unpack>true</unpack>
-                            <outputFileName>asciidoctor-reveal.js-${asciidoctor-revealjs.version}.zip</outputFileName>
-                            <outputDirectory>${project.build.directory}</outputDirectory>
-                        </configuration>
-                    </execution>
                     <execution>
                         <id>install-revealjs</id>
                         <phase>generate-resources</phase>
@@ -58,24 +81,73 @@
                 </executions>
             </plugin>
             <plugin>
+                <groupId>org.jruby.maven</groupId>
+                <artifactId>gem-maven-plugin</artifactId>
+                <version>3.0.2</version>
+                <configuration>
+                    <jrubyVersion>${jruby.version}</jrubyVersion>
+                    <gemHome>${project.build.directory}/gems</gemHome>
+                    <gemPath>${project.build.directory}/gems</gemPath>
+                </configuration>
+                <executions>
+                    <!-- Install required gems in target directory -->
+                    <execution>
+                        <id>install-gems</id>
+                        <goals>
+                            <goal>initialize</goal>
+                        </goals>
+                        <phase>initialize</phase>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.asciidoctor</groupId>
                 <artifactId>asciidoctor-maven-plugin</artifactId>
                 <version>${asciidoctor.maven.plugin.version}</version>
                 <dependencies>
                     <dependency>
+                        <groupId>org.jruby</groupId>
+                        <artifactId>jruby</artifactId>
+                        <version>${jruby.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.asciidoctor</groupId>
+                        <artifactId>asciidoctorj</artifactId>
+                        <version>${asciidoctorj.version}</version>
+                    </dependency>
+                    <dependency>
                         <groupId>org.asciidoctor</groupId>
                         <artifactId>asciidoctorj-diagram</artifactId>
-                        <version>1.5.18</version>
+                        <version>${asciidoctorj.diagram.version}</version>
                     </dependency>
                 </dependencies>
                 <configuration>
-                    <requires>
-                        <require>asciidoctor-diagram</require>
-                    </requires>
-                    
+                    <sourceDirectory>src/main/asciidoc</sourceDirectory>
                     <logHandler>
                         <outputToConsole>true</outputToConsole>
                     </logHandler>
+                    <!-- include the asciidoctor-revealjs gem -->
+                    <gemPath>${project.build.directory}/gems</gemPath>
+                    <requires>
+                        <require>asciidoctor-revealjs</require>
+                        <require>asciidoctor-diagram</require>
+                    </requires>
+                    <outputDirectory>${project.slides.directory}</outputDirectory>
+                    <backend>revealjs</backend>
+                    <attributes>
+                        <!--
+                                As we are downloading reveal.js in runtime, it sits in a nonstandard folder `reveal.js-${revealjs.version}`
+                            -->
+                        <revealjsdir>reveal.js-${revealjs.version}</revealjsdir>
+                        <!-- put here the reveal.js specific attributes -->
+                        <sourcedir>${basedir}/src/main/java</sourcedir>
+                        <revealjs_theme>black</revealjs_theme>
+                        <!--<revealjs_transition>linear</revealjs_transition>-->
+                        <project-version>${project.version}</project-version>
+                        <rouge-style>github</rouge-style>
+                        <rouge-css>style</rouge-css>
+                        <source-highlighter>rouge</source-highlighter>
+                    </attributes>
                 </configuration>
                 <executions>
                     <execution>
@@ -87,21 +159,6 @@
                         <configuration>
                             <sourceDocumentName>lecture.adoc</sourceDocumentName>
                             <outputFile>index.html</outputFile>
-                            <outputDirectory>${project.slides.directory}</outputDirectory>
-                            <backend>revealjs</backend>
-                            <templateDir>${project.build.directory}/asciidoctor-reveal.js-${asciidoctor-revealjs.version}/templates</templateDir>
-                            <sourceHighlighter>coderay</sourceHighlighter>
-                            <attributes>
-                                <!--
-                                        As we are downloading reveal.js in runtime, it sits in a nonstandard folder `reveal.js-${revealjs.version}`
-                                    -->
-                                <revealjsdir>reveal.js-${revealjs.version}</revealjsdir>
-                                <!-- put here the reveal.js specific attributes -->
-                                <sourcedir>${basedir}/src/main/java</sourcedir>
-                                <revealjs_theme>black</revealjs_theme>
-                                <!--<revealjs_transition>linear</revealjs_transition>-->
-                                <project-version>${project.version}</project-version>
-                            </attributes>
                         </configuration>
                     </execution>
                     <execution>
@@ -113,25 +170,18 @@
                         <configuration>
                             <sourceDocumentName>lecture-en.adoc</sourceDocumentName>
                             <outputFile>index-en.html</outputFile>
-                            <outputDirectory>${project.slides.directory}</outputDirectory>
-                            <backend>revealjs</backend>
-                            <templateDir>${project.build.directory}/asciidoctor-reveal.js-${asciidoctor-revealjs.version}/templates</templateDir>
-                            <sourceHighlighter>coderay</sourceHighlighter>
-                            <attributes>
-                                <!--
-                                        As we are downloading reveal.js in runtime, it sits in a nonstandard folder `reveal.js-${revealjs.version}`
-                                    -->
-                                <revealjsdir>reveal.js-${revealjs.version}</revealjsdir>
-                                <!-- put here the reveal.js specific attributes -->
-                                <sourcedir>${basedir}/src/main/java</sourcedir>
-                                <revealjs_theme>black</revealjs_theme>
-                                <!--<revealjs_transition>linear</revealjs_transition>-->
-                                <project-version>${project.version}</project-version>
-                            </attributes>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
         </plugins>
     </build>
+
+    <repositories>
+        <repository>
+            <id>mavengems</id>
+            <url>mavengem:https://rubygems.org</url>
+        </repository>
+    </repositories>
+
 </project>
